[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "henryhoangduong",email = "henryhoangduong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "litellm (>=1.63.14,<2.0.0)"
]

[tool.poetry]
packages = [{include = "python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
